Correctly display multiple referencing notes

--- a/src/webview/resource-search-view.css
+++ b/src/webview/resource-search-view.css
@@ -36,3 +36,8 @@
     text-align: end;
     display: table-cell;
 }
+
+.referencing-notes-list {
+    display: flex;
+    flex-direction: column;
+}
