--- a/src/webview/resource-search-view.css
+++ b/src/webview/resource-search-view.css
@@ -7,24 +7,52 @@
     display: block;
     flex-direction: column;
     min-width: 400px;
+    /* position: absolute; */
+    /* z-index: 1; */
 }
 
 #query-input {
     width: 100%;
     box-sizing: border-box;
+    border-radius: 8px;
 }
 
 #search-results {
     display: table;
     width: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    max-height: 296px;
+    overflow-y: auto;
+    background: #fff;
+    list-style: none;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.16);
 }
 
-#results-header {
-    display: table-header-group;
+[data-position="below"] #search-results {
+    margin-top: -1px;
+    border-top-color: transparent;
+    border-radius: 0 0 8px 8px;
+    padding-bottom: 8px;
+}
+
+[data-position="above"] #search-results {
+    margin-bottom: -1px;
+    border-bottom-color: transparent;
+    border-radius: 8px 8px 0 0;
+    padding-top: 8px;
 }
 
 .search-result-row {
     display: table-row-group;
+    padding: 12px 12px 12px 48px;
+    border: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+.search-result-row:hover,
+.search-result-row[selected="true"] {
+  background-color: rgba(0, 0, 0, 0.06);
 }
 
 .resource-name-cell {
