--- a/src/webview/resource-search-view.css
+++ b/src/webview/resource-search-view.css
@@ -1,5 +1,9 @@
 #joplin-plugin-content {
     width: fit-content;
+	background-color: var(--joplin-background-color);
+	color: var(--joplin-color);
+	font-size: var(--joplin-font-size);
+	font-family: var(--joplin-font-family);
 }
 
 #resource-search {
